# omegause-sop

./: .env.example  .gitignore  README.md  ci.yml  cli.py  cli_en.py  gui_agent.md  pyproject.toml  requirements.txt  requirements_guiagent.txt
domain_knowledge_template/: pvsyst_domain.md  pvsyst_params.md
prompts/: executor_system_prompt_new.txt  executor_system_prompt_old.txt  reasoner_prompts_new.txt  reasoner_prompts_old.txt
