[project]
name = "app-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=21.7b0",
    "fastapi>=0.78.0",
    "flake8>=3.9.2",
    "gradio-client>=2.0.0",
    "keyboard>=0.13.5",
    "loguru>=0.5.3",
    "mypy>=0.910",
    "numpy>=1.21.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.5.3.56",
    "pandas>=1.3.0",
    "pillow>=8.3.1",
    "pyautogui>=0.9.50",
    "pylint>=2.9.0",
    "pynput>=1.8.1",
    "pytest>=6.2.5",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.6.1",
    "python-docx>=0.8.11",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.5",
    "pywin32>=303",
    "pywinauto>=0.6.8",
    "ruff>=0.14.6",
    "typing-extensions>=4.0.0",
    "uiautomation>=2.0.15",
    "uvicorn>=0.17.6",
    "rich>=13.0",
    "questionary>=2.0.0",
]
# ruff 相关
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
fixable = ["E", "W", "F", "I", "B", "UP", "SIM"]
